Edit Chore Things
폴더구조, import구문 변경

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,20 +14,22 @@ dependencies:
   go_router: ^17.0.0
   flutter_bloc: ^9.1.1
   equatable: ^2.0.7
-  supabase: ^2.10.0
   get_it: ^9.1.1
   injectable: ^2.7.0
   freezed_annotation: ^3.1.0
   json_annotation: ^4.9.0
   flutter_localizations:
     sdk: flutter
-  intl: ^0.20.2
+  app_l10n:
+    path: packages/l10n
+  app_extension:
+    path: packages/extension
   app_theme:
     path: packages/theme
-  app_component:
-    path: packages/component
   app_env:
     path: packages/env
+  supabase_datasource:
+    path: packages/supabase_datasource
 
 dev_dependencies:
   flutter_test:
